# jrb-compensation-studio

./: .gitattributes  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
crates/jrb-license-core/: Cargo.toml
crates/jrb-license-core/src/: error.rs  format.rs  lib.rs  payload.rs  verify.rs
docs/: ARCHITECTURE.md  BUSINESS_RULES.md  CALCULATION_CONTRACT.md  CAMPAIGN_SIMULATION.md  COMPENSATION_REFERENCES.md  DATABASE_SCHEMA.md  DATA_DICTIONARY.md  DEVELOPMENT_LOG.md  HR_EXCEL_EXPORT.md  HR_IMPORT.md  LOCAL_ACCESS_SECURITY.md  OFFLINE_LICENSES.md  PRODUCT_VISION.md  SIMULATION_PERSISTENCE.md
docs/releases/: 0.9.0-prerecette-1.md  0.9.1-prerecette.1.md  0.9.1-prerecette.2.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: access.json  default.json  main.json
src-tauri/license/: license_public_key.b64
src-tauri/migrations/: 0001_initial_persistence.sql  0002_compensation_references.sql  0003_hr_import.sql  0004_compensation_calculation.sql  0005_campaign_simulations.sql  0006_employee_promotions.sql  0007_simulation_contract_v4_results.sql  0008_nine_box_neutralization.sql  0009_nine_box_confirmation_factor.sql  0010_local_access_state.sql  0011_license_activations.sql  0012_minimum_guarantee_effective_month.sql  0013_universal_fixed_amount.sql
src-tauri/permissions/: allow-activate-offline-license.toml  allow-campaign-write.toml  allow-change-local-password.toml  allow-export-simulation-run-excel.toml  allow-get-local-access-status.toml  allow-lock-local-access.toml  allow-replace-current-population.toml  allow-save-simulation-run.toml  allow-setup-local-access.toml  allow-unlock-local-access.toml
src-tauri/src/: campaign_write.rs  hr_import.rs  lib.rs  main.rs  persistence.rs  simulation_persistence.rs  sqlite_local.rs
src-tauri/src/local_access/: calendar.rs  commands.rs  error.rs  license.rs  license_tests.rs  mod.rs  password.rs  state.rs  store.rs  tests.rs  windows.rs
src-tauri/src/simulation_excel_export/: atomic_write.rs  encrypt.rs  error.rs  load.rs  mod.rs  models.rs  numeric.rs  password.rs  rates.rs  sanitize.rs  tests.rs  workbook.rs
src/access/: AccessApp.tsx
src/app/: AppDataProvider.tsx  AppNavigationProvider.tsx  AppShell.tsx  CompensationReferenceProvider.tsx  HrImportProvider.tsx  SimulationConfigurationProvider.tsx  SimulationExecutionProvider.tsx  SimulationHistoryRefreshProvider.tsx  SimulationSaveProvider.tsx  appVersion.ts  formatters.ts
src/config/: branding.ts
src/pages/: AboutPage.tsx  CampaignsPage.tsx  DashboardPage.tsx  ImportPage.tsx  ReferencesPage.tsx  SettingsPage.tsx  SimulationHistoryPage.tsx  SimulationPage.tsx  pageDefinitions.ts  pages.tsx
src/services/: campaignService.ts  compensationReferenceService.ts  createAppServices.ts  errors.ts  hrImportService.ts  organizationService.ts  sanitizeTechnicalError.ts
src/styles/: global.css
src/tests/: App.test.tsx  annualBudgetMonthlyIncrease.test.ts  baseSalaryReminder.test.ts  buildSimulationResultIdentity.test.ts  campaignArchive.test.ts  campaignSimulationReadiness.test.ts  canonicalDecimalText.test.ts  compensationCalculation.test.ts  compensationReferences.test.tsx  configurableRetroactivity.test.ts  employerCostAssietteI1.test.ts  employerCostConfiguration.test.ts  employerPeriodCost.test.ts  executeCampaignSimulation.test.ts  formatExactBudgetDisplay.test.ts  hrExcelExport.test.tsx  (+32 more)
tools/license-generator/: Cargo.toml
tools/license-generator/src/: commands.rs  keys.rs  main.rs
(+133 files in other folders)
