[package]
name = "jrb-compensation-studio"
version = "0.9.1-prerecette.1"
description = "Planification sécurisée des augmentations salariales."
authors = ["JRB XSolutions"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jrb_compensation_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-dialog = "2"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# LOT 2B-E1 — génération XLSX RH + chiffrement agile (versions épinglées).
# rand 0.9 requis : ms-offcrypto-writer 1.0.7 lie CryptoRng/Rng de rand 0.9
# (rand 0.8 ne satisfait pas le bound de Ecma376AgileWriter::create).
rust_xlsxwriter = "0.96.0"
ms-offcrypto-writer = "1.0.7"
zeroize = { version = "1.8.1", features = ["derive"] }
rand = "0.9"
# LOT 2B-RC1-SEC1-A — mot de passe local + dates civiles
argon2 = "0.5"
password-hash = { version = "0.5", features = ["getrandom"] }
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
# LOT 2B-RC1-SEC1-B — activation de licence hors ligne (vérification Ed25519).
jrb-license-core = { path = "../crates/jrb-license-core" }
ed25519-dalek = "2"

[dev-dependencies]
tempfile = "3"
# LOT 2B-E1 — déchiffrement pour le test de roundtrip Agile.
office-crypto = "0.3.0"
# LOT 2B-E1 — lecture des feuilles OOXML dans les tests (features alignées sur
# la résolution existante tirée par rust_xlsxwriter : deflate uniquement).
zip = { version = "7", default-features = false, features = ["deflate"] }
