[package]
name = "jrb-license-core"
version = "0.1.0"
edition = "2021"
description = "Format et vérification des licences hors ligne JRB Compensation Studio (sans secret)."
publish = false

[dependencies]
base64ct = { version = "1.6", features = ["alloc"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde", "macros"] }

[dev-dependencies]
rand = "0.8"
